--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Whenisgood heatmap",
-	"description": "Displays a heatmap",
+	"description": "Turns whenisgood results into a heatmap",
 	"version": "1.0",
 
 	"permissions": [
@@ -18,8 +18,7 @@
 		}
 	],
 	"browser_action": {
-		"default_icon": "icon.png",
-		"default_title": "Heatmap me"
+		"default_title": "Whenisgood heatmap"
 	},
 
 	"manifest_version": 2
