--- a/heat-pack/manifest.json
+++ b/heat-pack/manifest.json
@@ -1,5 +1,6 @@
 {
 	"name": "Whenisgood heatmap",
+	"short_name": "WhenHeatMap",
 	"description": "Turns whenisgood results into a heatmap",
 	"version": "1.0",
 
@@ -17,7 +18,8 @@
 		}
 	],
 	"browser_action": {
-		"default_title": "Whenisgood heatmap"
+		"default_title": "Whenisgood heatmap",
+		"default_icon": "icon.png"
 	},
 
 	"manifest_version": 2
